fixed scrolling on ios

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -86,7 +86,8 @@ button:disabled {
   background-color: white;
   border-radius: 0.5%;
   border: 1px solid fade-out(black, 0.05);
-  overflow: auto;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 #app-header {
